--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -250,4 +250,8 @@
     <string name="gird_picker_entry_content_description" msgid="7538418512525897691">Change app grid</string>
 
     <string name="icon_pack_title">System Icon Packs</string>
+
+    <string name="wallpaper_color_tab">Wallpaper colors</string>
+    <string name="preset_color_tab">Basic colors</string>
+    <string name="color_changed">Color changed</string>
 </resources>
